routes/auth.js add router.post(/update/password)
